Added Bearer auth in api for /customer to work with swagger-ui.html.
