# api-business/server/src/main/java/ch/heig/amt/business/server/configuration/SwaggerDocumentationConfig.java
@@ -5,9 +5,12 @@ import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.ApiInfo;
+import springfox.documentation.service.ApiKey;
 import springfox.documentation.service.Contact;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
+
+import java.util.Arrays;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-07-26T19:36:34.802Z")
 @Configuration
@@ -33,6 +36,7 @@ public class SwaggerDocumentationConfig {
                 .build()
                 .directModelSubstitute(org.joda.time.LocalDate.class, java.sql.Date.class)
                 .directModelSubstitute(org.joda.time.DateTime.class, java.util.Date.class)
+                .securitySchemes(Arrays.asList(new ApiKey("Bearer", "Authorization", "header")))
                 .apiInfo(apiInfo());
     }
 }
